--- a/public/splashscreen.html
+++ b/public/splashscreen.html
@@ -11,7 +11,7 @@
       <dotlottie-wc
         class="hero-animation"
         backgroundcolor="#15181B"
-        src="./splash.json"
+        src="/splash.json"
         preserveAspectRatio="xMidYMid meet"
         speed="1"
         autoplay
